--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -53,7 +53,7 @@ You can use Okta's [Bookmark App integration](#add-apollo-graphos-as-a-bookmark-
 5. Send the following information to your Apollo contact:
 
 - **Metadata URL** you copied in the last step
-- **Email address** you use to log in GraphOS Studio
+- **Email address** you use to log in to GraphOS Studio
   - The member associated with this email address will need an [org admin role](../members/#organization-wide-member-roles). You can begin SSO setup without it, but you will need it to complete setup.
 
 Your Apollo contact will let you know once SSO setup is complete.
