--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -8,7 +8,7 @@ This guide walks through configuring Okta as your Apollo organization's identity
 You can [use Okta's official GraphOS integration](#using-oktas-official-apollo-graphos-integration) (recommended) or create a custom SAML integration (legacy).
 Both methods require an Okta account with administrator privileges.
 
-Once you've set up your integration, you need to [assign users to it in Okta](#assign-users-in-okta) so they can access GraphOS via the **Sign in with SSO** button on the [GraphOS Studio login page](https://studio.apollographql.com/login).
+Once you've set up your integration, you need to [assign users to it in Okta](#assign-users-in-okta) so they can access GraphOS Studio via the **Sign in with SSO** button on the [GraphOS Studio login page](https://studio.apollographql.com/login).
 
 ## Using Okta's official Apollo GraphOS integration
 
