--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -135,7 +135,7 @@ If your subgraphs use [Apollo Server with the `@apollo/subgraph` library](/apoll
 Directly below the [**Operations Overview**](#operations-overview), you can find the following request metric visualizations:
 
 - A time series chart showing the [**request rate**](#request-rate) in requests per minute (req/min)
-- A [**request latency**](#request-latency) graph, generally in milliseconds, seconds, and/or minutes (ms, s, min)
+- A [**request latency**](#request-latency) heatmap, generally in milliseconds, seconds, and/or minutes (ms, s, min)
 - A [**request latency distribution**](#request-latency-distribution) histogram
 
 ### Request rate
