--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -85,7 +85,7 @@ Each [graph API key](../api-keys/) also has a corresponding member role. This ro
 
 An additional role called **Persisted Query Publisher** is only available for graph API keys, not for organization members. The role is only available for API keys for graphs in [Enterprise organizations](/graphos/enterprise/). API keys with this role can run the [`rover persisted-queries publish`](/rover/commands/persisted-queries/) command to publish operations to [persisted query lists](../operations/persisted-queries). The role provides no other read or write access to the graph.
 
-This role is appropriate for use in client development teams' deployment processes. If your graph uses [persisted queries](/operations/persisted-queries/), some client teams may need to publish their operations to your graph's persisted query lists but should not be able to view your graph's schema, changelogs, or use other **Consumer**-level features.
+This role is appropriate for use in client development teams' deployment processes. If your graph uses [persisted queries](../operations/persisted-queries/), some client teams may need to publish their operations to your graph's persisted query lists but should not be able to view your graph's schema, changelogs, or use other **Consumer**-level features.
 
 Otherwise, a graph API key is equivalent in privileges to a user with the same role for the graph. For example, you can use a **Consumer** key to fetch a graph's schema, and you can use a **Graph Admin** key to manage integrations.
 
