--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -11,7 +11,7 @@ To visualize operation metrics in GraphOS Studio, you first need to report them 
 
 Apollo also offers a [Datadog integration](./datadog-integration) to forward your graph's performance metrics to your Datadog account.
 
-> Connecting a self-hosted router to GraphOS and Datadog forwarding are available only for [Enterprise plans](https://www.apollographql.com/pricing/).
+> Connecting a self-hosted router to GraphOS and forwarding metrics to Datadog are only available for [Enterprise plans](https://www.apollographql.com/pricing/).
 
 ## Insights and analysis
 
