--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -170,4 +170,4 @@ Request latency metrics provide crucial insights into the performance of various
   alt="The Insights page in GraphOS Studio"
 />
 
-The request latency distribution graph illustrates the spread or distribution of your request latencies. This graph can help you identify central tendencies, variability, and patterns in your request latency.
+The request latency distribution graph illustrates the frequency and volume of your request latencies. This graph can help you identify central tendencies, variability, and patterns in your request latency.
