--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -400,7 +400,7 @@ Return to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-conten
   alt="The Insights page in GraphOS Studio"
 />
 
-The test queries you executed in the previous step should already be represented on this page. (If they aren't there yet, check the page again in a few minutes.) After you update all of your clients to query your router, the **Insights** page becomes vital to monitoring your supergraph's performance.
+The test queries you executed in the previous step should already be represented on this page. (If they aren't there yet, check the page again in a few minutes.) After you update all of your clients to query your router, the Insights page becomes vital to monitoring your supergraph's performance.
 
 Learn more about the available metrics in the [metrics documentation](../metrics).
 
