--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -349,7 +349,7 @@ Because you've created a cloud supergraph, operations you run in the Explorer ar
 
 ## 6. View operation and field metrics
 
-Here's a powerful benefit of a cloud supergraph: because clients execute operations against your GraphOS-managed router, the router can automatically collect metrics on those operations and their fields. You can then visualize those metrics in Studio.
+Here's a powerful benefit of a cloud supergraph: because clients execute operations against your GraphOS-managed router, the router automatically collects metrics on those operations and their fields. You can then visualize those metrics in Studio.
 
 Go to your variant's **Insights** page, which looks like this:
 
@@ -359,7 +359,7 @@ Go to your variant's **Insights** page, which looks like this:
   alt="The Insights page in GraphOS Studio"
 />
 
-The operations you [executed in the Explorer](#4-query-your-supergraph) should already be represented on this page. After you update all of your clients to query your router and configure your router, the Insights page becomes vital to monitoring your supergraph's performance.
+The operations you [executed in the Explorer](#4-query-your-supergraph) should already be represented on this page. After you update all of your clients to query your router, the Insights page becomes vital to monitoring your supergraph's performance.
 
 Learn more about the available metrics in the [metrics documentation](../metrics).
 
