--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -46,7 +46,8 @@ Beneath each of those metrics, you can also see the individual operations with:
   alt="Operations Overview in GraphOS Studio"
 />
 
-> The blue **M** icon (Ⓜ️) next to an operation name indicates it's a mutation.
+> The blue **M** icon next to an operation name indicates it's a mutation.
+> The purple **S** icon next to an operation name indicates it's a subscription.
 
 You can adjust the overview's timeframe and filter by client in the top right corner.
 
@@ -132,7 +133,7 @@ If your subgraphs use [Apollo Server with the `@apollo/subgraph` library](/apoll
 
 ## Request metrics
 
-Directly below the [**Operations Overview**](#operations-overview), you can find the following request metric visualizations:
+Directly below the [**Operations Overview**](#operations-overview), you can find the following request and subscription metric visualizations:
 
 - A time series chart showing the [**request rate**](#request-rate) in requests per minute (req/min)
 - A [**request latency**](#request-latency) heatmap, generally in milliseconds, seconds, and/or minutes (ms, s, min)
