--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -105,7 +105,10 @@ A few operations aren't listed in the table above because they are _only_ suppor
 
 **Org Admin**s can invite individual members by email address from your organization's Members tab in [Apollo Studio](https://studio.apollographql.com). Organization admins can also create a persistent **invite link** from the organization's Settings tab, which can be used to invite any number of members. Using either method, an org admin can specify which role a new member receives.
 
-> **Do not share invite links publicly.** Anyone with the link can join your organization. If an invite link becomes compromised, an admin can replace or disable it from the Settings tab.
+> ⚠️ **Notes**  
+> - If your organization uses an identity provider (IdP) for single sign-on (SSO), before inviting an individual member, verify that the member can log in to Studio via your SSO provider.
+> - **Do not share invite links publicly.** Anyone with the link can join your organization. If an invite link becomes compromised, an admin can replace or disable it from the Settings tab.
+
 
 ## Removing members
 
