Apply suggestions from code review
Co-authored-by: Edward Huang <18322228+shorgi@users.noreply.github.com>

--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -356,7 +356,7 @@ Go to your variant's **Insights** page, which looks like this:
 <img
   src="../../img/insights-quickstart.jpg"
   className="screenshot"
-  alt="The Insights page in GraphOS Studio"
+  alt="The Insights page in GraphOS Studio, showing metrics for operations and their fields"
 />
 
 The operations you [executed in the Explorer](#4-query-your-supergraph) should already be represented on this page. After you update all of your clients to query your router, the Insights page becomes vital to monitoring your supergraph's performance.
