--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -12,20 +12,19 @@ Once you've configured your graph to send [field metrics to GraphOS](./sending-o
 />
 
 
-> **Note**: Reporting field metrics requires additional steps beyond operation metrics. See [Reporting field usage](./sending-operation-metrics#reporting-field-usage) for details.
 
+The Insights page presents operation and field metrics. It has two main sections:
 
-This page combines operation and field metrics and has two main sections:
+- The **collapsible left sidebar**. Search, filter, and sort operations and fields.
+- The **main insights view**. View either overall operations metrics by default, or field information and usage metrics for a single field selected from the left sidebar.
 
-- The collapsible left sidebar, where you can search, filter, and sort operations and fields
-- The main insights view, which displays overall operations metrics by default but displays individual field information and usage metrics when you select a field from the left sidebar
-
-This page focuses on field metrics accessible from the left sidebar. Refer to [Operation metrics in GraphOS](./operations) for more information on the other metrics on this page, including [resolver-level traces](/operations#resolver-level-traces).
+This guide focuses on field metrics accessible from the left sidebar. Refer to [Operation metrics in GraphOS](./operations) for more information on the other metrics on this page, including [resolver-level traces](/operations#resolver-level-traces).
 
 ## Field navigation
 
-By default, the left sidebar shows a paginated list of all fields, but you can use it to hone in on certain ones.
-Specifically, you can:
+By default, the left sidebar shows a paginated list of all fields. 
+
+To hone in on certain fields:
 
 - Search for a particular field by its name or parent type
 - Filter fields by whether they are unused or deprecated
