--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -386,7 +386,7 @@ Now that our router is running, we can quickly open our browser to `localhost:40
 
 <img src="../../img/gateway_sandbox.jpg" class="screenshot" alt="Schema view in Apollo Sandbox" width="600" />
 
-While we're here, execute some test queries against the supergraph! We'll look at metrics for those test queries in the next step.
+Let's execute some test queries against the supergraph. We'll look at metrics for those test queries in the next step.
 
 ## 6. View operation and field metrics
 
@@ -397,10 +397,10 @@ Return to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-conten
 <img
   src="../../img/insights-quickstart.jpg"
   className="screenshot"
-  alt="The Insights page in GraphOS Studio"
+  alt="The Insights page in GraphOS Studio, showing metrics for operations and their fields"
 />
 
-The test queries you executed in the previous step should already be represented on this page. (If they aren't there yet, check the page again in a few minutes.) After you update all of your clients to query your router, the Insights page becomes vital to monitoring your supergraph's performance.
+Within a few minutes, the test queries you executed in the previous step should be represented on this page. The Insights page is vital to monitoring your supergraph's performance across all of your clients that query the router.
 
 Learn more about the available metrics in the [metrics documentation](../metrics).
 
