--- a/src/content/graphos/delivery/validating-client-operations.mdx
+++ b/src/content/graphos/delivery/validating-client-operations.mdx
@@ -3,7 +3,7 @@ title: Validating client operations
 description: Confirm that all client operations are supported by your schema
 ---
 
-You can confirm that all of the GraphQL operations defined in your client application are valid against the types, fields, and arguments in your graph's [published schema](./). To do so, you use the `apollo client:check` command of the [Apollo CLI](/rover/apollo-cli/):
+You can confirm that all of the GraphQL operations defined in your client application are valid against the types, fields, and arguments in your graph's [published schema](./publication). To do so, you use the `apollo client:check` command of the [Apollo CLI](/rover/apollo-cli/):
 
 ```
 $ apollo client:check
